Fixed bugs
Added logging for database queries
Update swagger docs
Update model
Fix sql function
